# centauro_scraper

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.ipynb
app/: main.py
app/api/: products.py
app/core/: logger.py
app/db/: database.py
app/models/: product.py
app/scraper/: centauro.py  driver.py  parser.py
