[project]
name = "centauro-scraper"
version = "0.1.0"
description = "Scraper da Centauro exposto via FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "selenium>=4.20",
    "undetected-chromedriver>=3.5",
    "pydantic>=2.0",
    "setuptools>=82.0.1",
]

